[Misc] Code cleanup to apply best practices